//SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION. All rights reserved.

//Licensed under the Apache License, Version 2.0 (the "License");
//you may not use this file except in compliance with the License.
//You may obtain a copy of the License at

//http://www.apache.org/licenses/LICENSE-2.0

//Unless required by applicable law or agreed to in writing, software
//distributed under the License is distributed on an "AS IS" BASIS,
//WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//See the License for the specific language governing permissions and
//limitations under the License.

//SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package router.v1;

import "proto/router/v1/messages.proto";

option go_package = "go.corp.nvidia.com/osmo/proto/router/v1;routerv1";

// RouterClientService handles connections from CLI clients
service RouterClientService {
  // Exec creates a bidirectional stream for terminal I/O
  rpc Exec(stream ExecRequest) returns (stream ExecResponse);
  
  // PortForward creates a bidirectional stream for port forwarding
  // Supports both TCP and UDP (specified in init message)
  rpc PortForward(stream PortForwardRequest) returns (stream PortForwardResponse);
  
  // Rsync creates a bidirectional stream for file synchronization
  rpc Rsync(stream RsyncRequest) returns (stream RsyncResponse);
}

// RouterAgentService handles connections from osmo-ctrl agents
service RouterAgentService {
  // RegisterExec establishes agent endpoint for exec session
  // Agent sends registration, then receives client messages
  rpc RegisterExec(stream ExecResponse) returns (stream ExecRequest);
  
  // RegisterPortForward establishes agent endpoint for port forwarding
  rpc RegisterPortForward(stream PortForwardResponse) returns (stream PortForwardRequest);
  
  // RegisterRsync establishes agent endpoint for rsync
  rpc RegisterRsync(stream RsyncResponse) returns (stream RsyncRequest);
}

// RouterControlService provides auxiliary operations
service RouterControlService {
  // RefreshToken refreshes JWT authentication token
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  
  // GetSessionInfo retrieves information about an active session
  rpc GetSessionInfo(SessionInfoRequest) returns (SessionInfoResponse);
}
